--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "guzzle/guzzle": "dev-master",
         "symfony/console": "2.4.*@dev",
-        "symfony/yaml": "2.*"
+        "symfony/yaml": "2.*",
+        "doctrine/dbal": "2.*"
     }
 }
